# iniciativas_dados_abertos

./: projects.csv  pyproject.toml  readme.md  readme_template.md
scripts/: genMD.py
